Add reference to github repo

--- a/README
+++ b/README
@@ -4,3 +4,9 @@ so I can fix it up.  Thanks all!
 
 Also, feel free to direct any questions there, and I'll try to
 answer if I can.
+
+As a side note, these notes are now in a git repo at
+
+https://github.com/henryptung/math116
+
+as well.
